--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -2,4 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 4rem auto;
+  padding: 2rem 3rem 3rem;
+  max-width: 500px;
+  background: #ff6666;
+  color: white;
+  box-shadow: -20px -20px 0px 0px rgba(100, 100, 100, 0.1);
+}
+
+#Todo-list ul {
+  margin-top: 2rem;
 }
