--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,10 +1,11 @@
 .Todo {
   display: flex;
   font-size: 20px;
+  column-gap: 4px;
 }
 
 .Todo :first-child {
-  padding-right: 10px;
+  padding-right: 5px;
 }
 
 .Todo-Complete {
